# microbootstrap

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  package-lock.json  package.json  pyproject.toml  t.py
.github/workflows/: ci.yml  lint.yml  release_docs.yml  test.yml  workflow.yml
docs/.vuepress/: config.js
examples/: fastapi_app.py  faststream_app.py  litestar_app.py
microbootstrap/: __init__.py  bootstrap.py  console_writer.py  exceptions.py  granian_server.py  helpers.py  instruments_setupper.py  settings.py  vanilla_service_setupper.py
microbootstrap/base/: opentelemetry.py  sentry.py
microbootstrap/base/logging/: config.py  litestar.py
microbootstrap/bootstrappers/: base.py  fastapi.py  faststream.py  litestar.py
microbootstrap/config/: fastapi.py  faststream.py  litestar.py
microbootstrap/frameworks/: fastapi.py  litestar.py
microbootstrap/helpers/: base.py  opentelemetry.py  sentry.py
microbootstrap/helpers/logging/: base.py  litestar.py
microbootstrap/instruments/: __init__.py  base.py  cors_instrument.py  health_checks_instrument.py  instrument_box.py  logging_instrument.py  opentelemery_instrument.py  opentelemetry_instrument.py  prometheus_instrument.py  pyroscope_instrument.py  sentry_instrument.py  swagger_instrument.py
microbootstrap/logging/: base.py  litestar.py
microbootstrap/middlewares/: fastapi.py  litestar.py  logging.py  logging_level.py  opentelemetry.py  utils.py
microbootstrap/settings/: base.py  fastapi.py  litestar.py
tests/: conftest.py  settings_for_test.py  test_bootstrap.py  test_granian_server.py  test_helpers.py  test_instruments_setupper.py  test_settings.py
tests/bootstrappers/: test_fastapi.py  test_faststream.py  test_litestar.py  test_litestar_opentelemetry.py
tests/frameworks/: test_fastapi.py  test_litestar.py
tests/helpers/: test_logging.py  test_logging_configs.py  test_opentelemetry.py  test_sentry.py
tests/instruments/: test_cors.py  test_health_checks.py  test_instrument_box.py  test_logging.py  test_opentelemetry.py  test_prometheus.py  test_pyroscope.py  test_sentry.py  test_swagger.py
